# point_tutorial

./: .gitignore  CMakeLists.txt  README.md
answer/: CMakeLists.txt
answer/icp/: CMakeLists.txt  Icp.hpp  main.cpp
answer/normal/: CMakeLists.txt  main.cpp
answer/ransac/: CMakeLists.txt  Ransac.h  main.cpp
data/: point.xyz  sample.bat
icp/: CMakeLists.txt
include/: CMakeLists.txt  Camera.h  Kdtree.h  KinectWrapper.h  Light.h  PointCloud.h  Polygon3d.h  Window.h
kinect/: CMakeLists.txt  Kdtree.h  KinectWrapper.h  PointCloud.cpp  Window.h  main.cpp
normal/: CMakeLists.txt  normal.h
sample/: CMakeLists.txt  Kdtree.h  PointCloud.h  main.cpp
tips/: CMakeLists.txt  chull2d.cpp  eigenvector.cpp  pointer0.cpp  projection.cpp  random0.cpp  random1.cpp
